# VisibilityLattices

./: .gitignore  CMakeLists.txt  batch.sh  generator.sh  job.sh  main.cpp  main_gpu.cpp
DGMM2025/: Makefile  algorithm.tikz  beamer_pres.tex  biblio.bib  biblio2.bib  computation.tex  conclusion.tex  introduction.tex  macros.tex  mean-distance.tikz  normalsandcurvature.tex  paper.tex  pointelscomptime.tikz  visibility.tex  visibility.tikz
DGMM2025/template/: samplepaper.blg  samplepaper.tex
JMIV2026/: appendix.tex  beamer_pres.tex  biblio.bib  computation.tex  conclusion.tex  convergence.tex  cover-letter.tex  error-normals.tikz  introduction.tex  lattice-old.tikz  lattice.tikz  macros.tex  mean-distance-piecewise.tikz  mean-distance.tikz  normalsandcurvature.tex  paper.tex  pointelscomptime.tikz  visibility.tex  visibility.tikz
JMIV2026/graphDataMeanDist/: cubesphere_1.txt  cubesphere_2.txt  double_ellipsoid_1.txt  double_ellipsoid_2.txt  goursat_1.txt  goursat_2.txt  rcube_1.txt  rcube_2.txt  sphere9_2.txt  tetrahedron_1.txt  tetrahedron_2.txt
JMIV2026/graphDataMeanDistOld/: double_ellipsoid_1.txt  double_ellipsoid_2.txt  tetrahedron_2.txt
JMIV2026/graphDataMeanDistOld/v2/: cubesphere_2.txt  double_ellipsoid_1.txt  double_ellipsoid_2.txt  tetrahedron_1.txt  tetrahedron_2.txt
JMIV2026/graphDataNormalErrorMax/: double_ellipsoid-VN.txt  tetrahedron-II.txt  tetrahedron-PCA.txt  tetrahedron-VN.txt
JMIV2026/graphDataNormalErrorRMSE/: cubesphere-II.txt  cubesphere-PCA.txt  double_ellipsoid-PCA.txt  double_ellipsoid-VN.txt  tetrahedron-II.txt
JMIV2026/graphDataNormals/old/: ellipsoid-II.txt  goursat-II.txt  tetrahedron-II.txt
JMIV2026/graphDataNormals/piecewise/L2/: cubesphere-II.txt  cubesphere-PCA.txt  cubesphere-VNG.txt  cubesphere-VNR.txt  double_ellipsoid-II.txt  double_ellipsoid-PCA.txt  double_ellipsoid-VNG.txt  double_ellipsoid-VNR.txt  tetrahedron-II.txt  tetrahedron-PCA.txt  tetrahedron-VNG.txt  tetrahedron-VNR.txt
JMIV2026/graphDataNormals/piecewise/Loo/: cubesphere-II.txt  cubesphere-PCA.txt  cubesphere-VNG.txt  cubesphere-VNR.txt  double_ellipsoid-II.txt  double_ellipsoid-PCA.txt  double_ellipsoid-VNG.txt  double_ellipsoid-VNR.txt  tetrahedron-II.txt  tetrahedron-PCA.txt  tetrahedron-VNG.txt  tetrahedron-VNR.txt
JMIV2026/graphDataNormals/smooth/L2/: ellipsoid-PCA.txt  goursat-II.txt  goursat-PCA.txt  goursat-VNG.txt  rcube-PCA.txt  sphere9-II.txt  sphere9-PCA.txt  sphere9-VNG.txt  sphere9-VNR.txt
JMIV2026/graphDataNormals/smooth/Loo/: ellipsoid-PCA.txt  goursat-II.txt  goursat-PCA.txt  rcube-II.txt  rcube-PCA.txt  rcube-VNG.txt  sphere9-II.txt  sphere9-PCA.txt  sphere9-VNR.txt
JMIV2026/template/: cover-letter.tex
JMIV2026/template/auxil/: sn-article.aux  sn-article.blg  sn-article.out
JMIV2026_rev1/: biblio.bib  computation.tex  conclusion.tex  convergence.tex  cover-letter.tex  introduction.tex  lattice.tikz  make_zip.py  mean-distance.tikz  normalsandcurvature.tex  paper.tex  visibility.tex  visibility.tikz
JMIV2026_rev1/graphDataMeanDist/: double_ellipsoid_2.txt  sphere9_1.txt  torus_1.txt
JMIV2026_rev1/graphDataNormalErrorMax/: cubesphere-II.txt  cubesphere-PCA.txt  cubesphere-VN.txt  double_ellipsoid-II.txt  double_ellipsoid-PCA.txt
JMIV2026_rev1/graphDataNormalErrorRMSE/: cubesphere-VN.txt  double_ellipsoid-II.txt  tetrahedron-PCA.txt  tetrahedron-VN.txt
JMIV2026_rev1/graphDataNormals/old/: cubesphere-II.txt  double_ellipsoid-II.txt
JMIV2026_rev1/graphDataNormals/piecewise/L2/: cubesphere-II.txt  cubesphere-PCA.txt  cubesphere-VNG.txt  cubesphere-VNR.txt  double_ellipsoid-PCA.txt  double_ellipsoid-VNG.txt  double_ellipsoid-VNR.txt
JMIV2026_rev1/graphDataNormals/piecewise/Loo/: cubesphere-II.txt  cubesphere-PCA.txt  cubesphere-VNR.txt  double_ellipsoid-II.txt  double_ellipsoid-PCA.txt  double_ellipsoid-VNG.txt
JMIV2026_rev1/graphDataNormals/smooth/L2/: ellipsoid-II.txt  ellipsoid-PCA.txt  ellipsoid-VNG.txt  ellipsoid-VNR.txt  goursat-VNR.txt  rcube-II.txt  rcube-VNG.txt  rcube-VNR.txt
JMIV2026_rev1/graphDataNormals/smooth/Loo/: ellipsoid-PCA.txt  ellipsoid-VNG.txt  ellipsoid-VNR.txt  goursat-II.txt  goursat-PCA.txt  goursat-VNG.txt  goursat-VNR.txt  rcube-VNR.txt  sphere9-PCA.txt  sphere9-VNG.txt
JMIV2026_rev1/pictures/figNormalesDisplayV2/: process.sh
cmake/: dgtal.cmake
data/: d20-130.vol  d20-258.vol  tie-128.vol  tie-256.vol  tie-512.vol
gpu/: CMakeLists.txt  Vec3i.cu  main_gpu.cu  main_gpu.cuh  middleware.cpp  middleware.h  testgpucpu.cpp  testgpucpu.h
gpu/cmake/: dgtal.cmake  polyscope.cmake
models/adafit/: README.md
python/: README-adafit.md  adafit_runner.py  requirements-adafit.txt  test_adafit_runner.py
src/: adafit_bridge.cpp  adafit_bridge.h  polyhedra.cpp  polyhedra.h
